@@ -63,7 +63,7 @@ protected:
 	Actor *find_foe(int mode);	// Find a new opponent.
 	Actor *find_foe();
 	void approach_foe();		// Approach foe.
-	void start_strike(Rectangle& npctiles, Rectangle& opptiles);
+	void start_strike();
 	void run_away();
 	void set_weapon_info();		// Set 'max_reach' of weapon.
 public:
